Use select2 on mobile. Fixes no visible placeholder text for multiselects.

--- a/ssg/source/_styles_templates/_styles_industry/style.styl
+++ b/ssg/source/_styles_templates/_styles_industry/style.styl
@@ -3447,12 +3447,6 @@ a.btn_popover
 select[multiple]
     height 6rem
 
-select.select2-multiple
-    height 2.5rem
-
-    option
-        white-space break-spaces
-
 input, select
     height 2.5rem
     width 100%
